# clip-mark

./: .gitignore  README.md  eslint.config.ts  index.html  knip.json  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: auto-release.yaml
eslint-plugin-clip-mark/: index.ts
eslint-plugin-clip-mark/rules/: limited-inline-classname.ts  no-inline-classname.ts  no-inline-component-props.ts  require-tv-variants-suffix.ts  require-variants-call-styles-name.ts
src/: App.tsx  index.css  main.tsx  routeTree.gen.ts
src-tauri/: Cargo.toml  rustfmt.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: clip-mark.psd  icon.icns
src-tauri/src/: constants.rs  lib.rs  main.rs  state.rs
src-tauri/src/app_settings/: commands.rs  service.rs
src-tauri/src/note_capture/: commands.rs
src-tauri/src/obs_websocket/: commands.rs
src-tauri/src/obs_websocket_configuration/: commands.rs
src-tauri/src/obs_websocket_connection/: commands.rs  models.rs  service.rs
src-tauri/src/positioner/: mod.rs
src-tauri/src/shortcuts/: actions.rs  commands.rs  mod.rs  models.rs
src-tauri/src/system_tray/: service.rs
src-tauri/src/window_utilities/: commands.rs  mod.rs  service.rs
src-tauri/src/windows/: commands.rs  service.rs
src/components/: README.md  theme-provider.tsx
src/components/buttons/: button-group.tsx  button.tsx  (+2 more)
src/hooks/: use-controlled-state.tsx
src/lib/: constants.ts  get-strict-context.tsx  variants.ts
src/routes/: __root.tsx  capture-note.tsx  configuration.tsx  recording-status.tsx  system-tray-menu.tsx
(+66 files in other folders)
