[package]
name = "clip-mark"
version = "1.0.0"
description = "Quickly capture important moments in your recordings"
authors = ["domingasp"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "clip_mark_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-ico"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-store = "2"
tokio = { version = "1.48.0", features = ["full"] }
obws = { version = "0.14.0", features = ["events"] }
time = { version = "0.3.44", features = ["serde"] }
futures = "0.3"
tauri-plugin-log = "2"
log = "0.4"
strum = { version = "0.27", features = ["derive"] }
tauri-plugin-process = "2"

[target.'cfg(windows)'.dependencies]
tauri-plugin-positioner = { version = "2.3.1", features = ["tray-icon"] }
windows = { version = "0.62.2", features = [
	"Win32_Foundation",
	"Win32_UI_WindowsAndMessaging",
	"Win32_System_Threading",
	"Win32_Graphics_Dwm",
] }
